Cleanup (#249)
* Remove unused simulator mode

* Cleanup checkpoint No. 1
 + Game/PokerGame/GameContext
 + Remove old War! related phases

* Cleanup checkpoint No. 2
 + GameContext clarification
 + SaveDetails

* Cleanup checkpoint No. 3
 + OnlineManager, TokenizedList

* Cleanup checkpoint No. 4
 + TypedHashMap; add TypedHashMapTest

* Cleanup checkpoint No. 5
 + Phase, BasePhase

* Cleanup checkpoint No. 6
 + Minor typo, formatting fixes

* Cleanup checkpoint No. 7
 + DialogPhase

* Cleanup checkpoint No. 8
 + TournamentDirector

* Cleanup checkpoint No. 9
 + DashboardManager

* Cleanup checkpoint No. 10
 + DashboardPanel, DashboardEditorDialog

* Cleanup checkpoint No. 11
 + PokerTable

* Cleanup checkpoint No. 12
 + HoldemHand

* Cleanup checkpoint No. 13
 + DashboardAdvisor, DashboardItem, Rank
 + cleanup old setTableEventsImmediate

* Cleanup checkpoint No. 14
 + TournamentProfile